@@ -21,7 +21,7 @@
   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
   dolore eu fugiat <a href="/redirect" id="red">Redirect</a> pariatur. Excepteur sint occaecat cupidatat non proident,
   sunt in culpa qui officia
-  text   with
+  text   with &nbsp;
   whitespace
   id est laborum.
 </p>
